<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tv_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/settings_label_player"
        app:layout_constraintStart_toStartOf="@+id/label_guidline"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/settings_label_price"
        app:layout_constraintStart_toStartOf="@+id/label_guidline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/settings_label_place"
        app:layout_constraintStart_toStartOf="@+id/label_guidline"
        app:layout_constraintTop_toBottomOf="@+id/tv_place" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/settings_hint_text"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_place"
        app:layout_constraintEnd_toStartOf="@+id/end_guidline"
        app:layout_constraintStart_toEndOf="@+id/tv_barrier"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="0" />

    <EditText
        android:id="@+id/et_place"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/settings_hint_text"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
        app:layout_constraintEnd_toStartOf="@+id/end_guidline"
        app:layout_constraintStart_toEndOf="@+id/tv_barrier"
        tools:text="0" />

    <EditText
        android:id="@+id/et_player"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/settings_hint_text"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_player"
        app:layout_constraintEnd_toStartOf="@+id/end_guidline"
        app:layout_constraintStart_toEndOf="@+id/tv_barrier"
        tools:text="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/label_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="27dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/tv_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tv_player,tv_price,tv_place"
        tools:layout_editor_absoluteX="117dp" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/settings_submit_button"
        app:layout_constraintEnd_toEndOf="@+id/et_player"
        app:layout_constraintStart_toStartOf="@+id/tv_player"
        app:layout_constraintTop_toBottomOf="@+id/et_player" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guidline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="27dp" />

</androidx.constraintlayout.widget.ConstraintLayout>