<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="366dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="19dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="19dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textView3,textView2,textView"
            tools:layout_editor_absoluteX="74dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_label_place"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guidline_top" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_label_player"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_label_value"
            app:layout_constraintBottom_toTopOf="@+id/guidline_bottom"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/default_number_value"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/default_number_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/barrier2"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextNumberDecimal2"
            android:hint="@string/default_number_value"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@string/default_number_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/main_button_plus"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/main_button_minus"
            app:layout_constraintBaseline_toBaselineOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_plus"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextNumberDecimal2"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/editTextNumberDecimal2"
            app:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button_minus"
            app:layout_constraintBaseline_toBaselineOf="@+id/button7"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/main_label_awaiting_value"
            app:layout_constraintBottom_toTopOf="@+id/guidline_bottom"
            app:layout_constraintStart_toEndOf="@+id/barrier2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>